--- a/styles.css
+++ b/styles.css
@@ -1,100 +1,132 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
-
-:root {
- --primary-color: #285fc4;
- --secondary-color: #000000;
-}
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-html, body {
-    background: #f4f4f4;
-    font-family: 'Open Sans', sans-serif;
-}
-
-#navbar ul {
-    list-style: none;
-}
-
-#navbar ul li{
-    color: #000000;
-    display: inline-block;
-    padding: 1rem;
-    position: relative;
-    
-}
-
-#navbar ul li a{
-    color: #000000;
+body {
+    font-family: "Lato", sans-serif;
+    margin: 0px;
+  }
+  
+  .container {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+  
+  .nav-wrapper {
+    display: flex;
+    justify-content: space-between;
+    padding: 38px;
+  }
+  
+  .left-side {
+    display: flex;
+  }
+  
+  .nav-wrapper > .left-side > div {
+    margin-right: 20px;
+    text-transform: uppercase;
+    font-size: 0.9rem;
+  }
+  
+  .nav-link-wrapper {
+    height: 22px;
+    border-bottom: 1px solid transparent;
+    transition: border-bottom 0.5s;
+  }
+  
+  .active-nav-link {
+    border-bottom: 1px solid black;
+  }
+  
+  .active-nav-link a {
+    color: black !important;
+  }
+  
+  .nav-link-wrapper a {
+    color: #8a8a8a;
     text-decoration: none;
-}
-
-#navbar ul li ul{
-    display: none;
-}
-
-#navbar ul li:hover {
-cursor: pointer;
- background: #285fc4;
- color: rgb(255, 255, 255);
-}
-
-#navbar ul li:hover a{
-    color: #fff;
-}
-
-#navbar ul li:hover ul {
-    display: block;
+    transition: color 0.5s;
+  }
+  
+  .nav-link-wrapper:hover {
+    border-bottom: 1px solid black;
+  }
+  
+  .nav-link-wrapper a:hover {
+    color: black;
+  }
+  
+  .portfolio-items-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  
+  .portfolio-item-wrapper {
+    position: relative;
+  }
+  
+  .portfolio-img-background {
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 350px;
+    width: 100%;
+  }
+  
+  .img-text-wrapper {
     position: absolute;
-    left: 0;
-    width: 240px;
-    margin-top: 1rem;
-}
-
-#navbar ul li:hover ul li {
-    display: block;
-    background: #e7e7e7;
-}
-#navbar ul li:hover ul a{
-color: #000000;
-}
-
-#navbar ul li:hover{
-background: #e0e0e0;
-color: inherit;
-}
-
-#showcase {
+    top: 0;
     display: flex;
     flex-direction: column;
-    height: 300px;
-    align-items: center;
     justify-content: center;
+    align-items: center;
+    height: 100%;
     text-align: center;
-    padding: 0 2rem;
-    background: #285fc4;
-}
-
-#showcase h1 {
-    color: #fff;
-    font-size: 4rem;
-}
-
-@media (max-width: 600px) {
-#navbar ul li {
-    display: block;
-
-}
-#navbar ul li:hover ul {
-    width: 100;
-    position: relative;
+    padding-left: 100px;
+    padding-right: 100px;
+  }
+  
+  .img-text-wrapper .subtitle {
+    transition: 1s;
+    color: transparent;
+  }
+  
+  .image-blur {
+    transition: 1s;
+    filter: brightness(10%);
+  }
+  
+  .img-text-wrapper:hover .subtitle {
+    color: lightseagreen;
+    font-weight: 600;
+  }
+  
+  .logo-wrapper img {
+    width: 50%;
+    margin-bottom: 20px;
+  }
+  
+  .two-column-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+  
+  .profile-image-wrapper img {
     
-}
-}
+    width: 100%;
+
+   
+
+
+  }
+  
+  .profile-content-wrapper {
+    padding: 30px;
+  }
+  
+  .profile-content-wrapper h1 {
+    color: lightseagreen;
+    
+  }
+
+  
+
 
 
 
