--- a/styles.css
+++ b/styles.css
@@ -140,7 +140,7 @@ body {
   
 
   @media (max-width: 480px) {
-    .nav-link-wrapper ul li {
+    .nav-link-wrapper{
         display: block; }
   
     
@@ -168,9 +168,6 @@ body {
   
   
 }
-
-
-
 
 
 .class-headline {
@@ -244,6 +241,9 @@ filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)) drop-shadow(0px 4px 4px rgb
 border-radius: 86px;
 
 }
+
+
+
 
 
 @media only screen and (max-width: 600px) {
